[package]
name = "rust-l475"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stm32l4xx-hal = { version = "0.6", features = ["stm32l4x5"] }
cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.3"
panic-semihosting = "0.5"